feat: Собственный IoC контейнер